# organizer

./: .gitignore  Cargo.toml  README.md
locales/: en.yml  es.yml  pt-BR.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20251014_000005_alter_image_table.rs  m20257013_000003_alter_tags_table.rs  m20257018_000004_alter_image_table.rs  m2025701_000001_create_images_table.rs  m2025701_000002_create_tags_table.rs  m2025701_000003_create_image_tags_table.rs
src/: config.rs  main.rs  screen.rs  utils.rs
src/components/: empty_state.rs  header.rs  image_container.rs  image_preview_modal.rs  mod.rs  navbar.rs  pagination.rs  scrollable_form.rs  search_bar.rs  tag_selector.rs  toast.rs  toast_view.rs
src/config/: config.json
src/dtos/: image_dto.rs  mod.rs  tag_dto.rs
src/models/: filter.rs  image.rs  image_dto.rs  image_tag.rs  mod.rs  page.rs  tag.rs  tag_color.rs  toast.rs
src/models/enums/: image_type.rs  mod.rs
src/screen/: manage_tags.rs  preferences.rs  register.rs  search.rs  update.rs
src/services/: clipboard_service.rs  connection_db.rs  database_service.rs  file_service.rs  image_processor.rs  image_service.rs  logger_service.rs  mod.rs  tag_service.rs  thumbnail_service.rs  toast_service.rs
