[package]
name = "Organizer"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
arboard = { version = "3.6.1",features = ["wayland-data-control"] }
iced = { version = "0.13.1", features = ["image", "tokio"] }
iced_font_awesome = "0.2.1"
iced_modern_theme = "0.1.6"
rfd = "0.15.4"
image = "0.25.8"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.143"
serde = { version = "1.0.220", features = ["derive"] }
sea-orm = { version = "1.1.13", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
sea-orm-migration = "1.1.13"
log = "0.4.27"
migration = { path = "migration"}
chrono = "0.4.42"
dotenv = "0.15.0"
tracing-subscriber = "0.3.20"
rust-i18n = "3.1.5"
once_cell = "1.21.3"
natord = "1.0.9"
png = "0.18.0"
fast_image_resize = { version = "5.3.0", features = ["image"] }
uuid = { version = "1.18.1", features = ["v4"] }

[profile.release-opt]
inherits = "release"
codegen-units = 1
debug = false
lto = true
incremental = false
opt-level = 3
overflow-checks = false
strip = "debuginfo"



